# lab

./: CMakeLists.txt
lab-6-CMake/: CMakeLists.txt  main.cpp  sorts.h
