# CMakeList.txt: проект CMake для lab-6-CMake; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lab-6-CMake "main.cpp" "sorts.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
